shared/src/test/data/yeast/invalid-json/incomplete-entry-6.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'k'
Indicator           6,  2,  4 '\"'
EndScalar           7,  2,  5 ''
Indicator           7,  2,  5 ':'
WhiteSpace          8,  2,  6 ' '
Indicator           9,  2,  7 ','
LineBreak          10,  2,  8 '\n'
WhiteSpace         11,  3,  0 '  '
BeginScalar        13,  3,  2 ''
Indicator          13,  3,  2 '\"'
Text               14,  3,  3 'foo'
Indicator          17,  3,  6 '\"'
EndScalar          18,  3,  7 ''
Indicator          18,  3,  7 ':'
WhiteSpace         19,  3,  8 ' '
BeginScalar        20,  3,  9 ''
Indicator          20,  3,  9 '\"'
Text               21,  3, 10 'bar'
Indicator          24,  3, 13 '\"'
EndScalar          25,  3, 14 ''
LineBreak          25,  3, 14 '\n'
EndMapping         26,  4,  0 '}'
